--- a/RockPaperScissors-homework/app/src/main/res/values/strings.xml
+++ b/RockPaperScissors-homework/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">Rock Paper Scissors</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_help">Help</string>
     <string name="title_activity_game_result">GameResultActivity</string>
-
     <string name="hello_world">Hello world!</string>
 </resources>
