Added Help Screen
This is the working example of adding the help screen. The resources
contains an image for the rules and the text will have to be added.

--- a/RockPaperScissors-homework/app/src/main/res/values/strings.xml
+++ b/RockPaperScissors-homework/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="action_help">Help</string>
     <string name="title_activity_game_result">GameResultActivity</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="rules">Scissors cuts Paper covers Rock crushes Lizard poisons Spock smashes Scissors decapitates Lizard eats Paper disaproves Spock vaporizes Rock crushes Scissors</string>
+    <string name="title_activity_help">HelpActivity</string>
+    <string name="action_settings">Settings</string>
 </resources>
