--- a/RockPaperScissors-homework/app/src/main/res/values/strings.xml
+++ b/RockPaperScissors-homework/app/src/main/res/values/strings.xml
@@ -2,8 +2,9 @@
     <string name="app_name">Rock Paper Scissors</string>
 
     <string name="action_help">Help</string>
-    <string name="title_activity_game_result">GameResultActivity</string>
+    <string name="action_help_dialog">Help (Simple)</string>
+    <string name="title_activity_game_result">Game Result</string>
     <string name="rules">Scissors cuts Paper covers Rock crushes Lizard poisons Spock smashes Scissors decapitates Lizard eats Paper disaproves Spock vaporizes Rock crushes Scissors</string>
-    <string name="title_activity_help">HelpActivity</string>
+    <string name="title_activity_help">Help</string>
     <string name="action_settings">Settings</string>
 </resources>
